test/sema/typeck/operator/binary-identity-incompatible-1.dora
class A class B fn f(a: A, b: B) { a === b; }
